# hincal-backend

./: .gitignore  .gitlab-ci.yml  README.md  docker-compose.build.yml  docker-compose.ci.yml  docker-compose.yml  pyproject.toml  setup.cfg  test.json
config/: .env.template
docker/django/: Dockerfile
server/: urls.py
server/apps/blog/: admin.py  apps.py
server/apps/blog/api/: routers.py
server/apps/blog/fixtures/: support.yaml
server/apps/blog/migrations/: 0001_initial.py  0002_support.py  0003_delete_support.py
server/apps/blog/models/: __init__.py  post.py  support.py
server/apps/blog/permissions/: __init__.py  post.py  support.py
server/apps/hincal/: admin.py  apps.py  tasks.py
server/apps/hincal/api/: routers.py
server/apps/hincal/fixtures/: equipments.yaml  hincal.yaml  locations.yaml  sector.yaml
server/apps/hincal/migrations/: 0001_initial.py  0002_initial.py  0003_alter_archive_year.py  0004_remove_business_sector_valid_and_more.py  0005_alter_business_inn_alter_business_sub_sector.py  0006_remove_business_sub_sector_valid_and_more.py  0010_territoriallocation_and_more.py  (+10 more)
server/apps/services/: base_model.py  exception.py  serializers.py  views.py
server/apps/support/: admin.py
server/apps/user/: apps.py  tasks.py
server/settings/: __init__.py
server/settings/components/: common.py  cors.py  email.py  hincal.py
server/settings/environments/: development.py  production.py
server/templates/email/: confirm_email.html  reset_password.html
server/templates/report/: report.doc  report.docx
server/url_components/: __init__.py
(+95 files in other folders)
