[tool.poetry]
name = "hincal_backend"
version = "0.1.0"
description = "Super new project"
authors = ["dreamsafetyteam"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.89.1"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
django-split-settings = "^1.1.0"
tortoise-orm = {extras = ["asyncpg"], version = "^0.19.3"}
aerich = "^0.7.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
requests = "^2.31.0"


[tool.aerich]
tortoise_orm = "config.DB_CONFIG"
location = "app/db/migrations"
src_folder = "./app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
